# cmake-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
config/: doxyfile.in  (+3 more)
dependencies/: CMakeLists.txt
dependencies/benchmark/: CMakeLists.txt
dependencies/unit-test/: CMakeLists.txt
example_app/: CMakeLists.txt
example_app/bench/: CMakeLists.txt
example_app/bench/inc/app/: bench_app.hpp
example_app/bench/src/app/: application.cpp
example_app/inc/app/: application.hpp
example_app/src/: main.cpp
example_app/src/app/: application.cpp  main.cpp
example_app/test/: CMakeLists.txt
example_app/test/src/: test.cpp
example_app/test/src/app/: application.cpp  test_application.cpp
example_header_lib/: CMakeLists.txt
example_header_lib/inc/header/: wrapper_class.hpp
example_shared_lib/: CMakeLists.txt
example_shared_lib/bench/: CMakeLists.txt
example_shared_lib/bench/inc/shared/: bench_shared.hpp
example_shared_lib/bench/src/shared/: bench_shared.cpp  library.cpp
example_shared_lib/docs/: CMakeLists.txt  doxyfile.in
example_shared_lib/inc/shared/: library.hpp  shared_library.hpp
example_shared_lib/src/shared/: library.cpp  shared_library.cpp
example_shared_lib/test/: CMakeLists.txt
example_shared_lib/test/src/shared/: library.cpp  test_shared.cpp
example_static_lib/: CMakeLists.txt
example_static_lib/bench/: CMakeLists.txt
example_static_lib/bench/src/: bench.cpp
example_static_lib/bench/src/static/: bench_static.cpp  library.cpp
example_static_lib/inc/static/: library.hpp
example_static_lib/src/static/: library.cpp  static_library.cpp
example_static_lib/test/: CMakeLists.txt
example_static_lib/test/src/: test.cpp
example_static_lib/test/src/static/: library.cpp  test_static.cpp
exe_service/: CMakeLists.txt
exe_service/bench/src/app/: bench_app.cpp
exe_service/src/: main.cpp
exe_service/src/app/: application.cpp
lib_header/: CMakeLists.txt  README.md
lib_header/inc/header/: wrapper_class.hpp
lib_header/inc/jar/core/: contract.hpp  enum.hpp  type_traits.hpp
lib_header/inc/jar/net/: socket_type.hpp
lib_header/inc/jar/system/: basic_handle.hpp
lib_header/inc/jar/util/: contract.hpp
lib_header/test/unit/: CMakeLists.txt
lib_header/test/unit/src/jar/core/: contract_test.cpp
lib_header/test/unit/src/jar/system/: handle_test.cpp
lib_header/test/unit/src/jar/util/: contract_test.cpp
lib_shared/: CMakeLists.txt  README.md
lib_shared/bench/: CMakeLists.txt
lib_shared/bench/src/shared/: bench_shared.cpp
lib_shared/inc/jar/com/: connection.hpp
lib_shared/inc/jar/concurrency/: future.hpp  latch.hpp  queue.hpp  rr_scheduler.hpp  schedule.hpp  scheduler.hpp  scheduler_type_traits.hpp  start.hpp  then.hpp  thread_pool.hpp  type_traits.hpp  utilities.hpp  wait.hpp
lib_shared/inc/jar/concurrency/details/: callback_receiver.hpp  sender_adapter.hpp  value_receiver.hpp
lib_shared/inc/jar/net2/: basic_datagram_socket.hpp  basic_socket.hpp  basic_stream_socket.hpp  shutdown_mode.hpp  socket_address.hpp  socket_family.hpp  socket_type.hpp
lib_shared/src/jar/com/: connection.cpp
lib_shared/src/jar/concurrency/: latch.cpp  rr_scheduler.cpp  scheduler.cpp
lib_shared/src/jar/fs2/: file_descriptor.cpp  file_descriptor.hpp
lib_shared/src/jar/net2/: datagram_socket.cpp  datagram_socket.hpp  domain_address.cpp  domain_address.hpp  socket.cpp  socket.hpp  stream_socket.cpp  stream_socket.hpp
lib_shared/src/jar/util2/: contract.hpp
lib_shared/src/shared/: shared_library.cpp
lib_shared/test/bench/: CMakeLists.txt
lib_shared/test/bench/src/: bench.cpp
lib_shared/test/bench/src/jar/net/: basic_socket_benchmark.hpp  datagram_socket_benchmark.cpp  datagram_socket_benchmark.hpp  stream_socket_benchmark.cpp  stream_socket_benchmark.hpp
lib_shared/test/src/shared/: test_shared.cpp
lib_shared/test/unit/: CMakeLists.txt
lib_shared/test/unit/inc/jar/concurrency/: mock_sender.hpp
lib_shared/test/unit/src/: test.cpp
lib_shared/test/unit/src/jar/concurrency/: future_test.cpp  latch_test.cpp  queue_test.cpp  rr_scheduler_test.cpp  scheduler_test.cpp  start_test.cpp  then_test.cpp  thread_pool_test.cpp  type_traits_test.cpp  utilities_test.cpp
lib_shared/test/unit/src/jar/net2/: basic_socket_test.hpp  datagram_socket_test.cpp  datagram_socket_test.hpp  stream_socket_test.cpp  stream_socket_test.hpp
lib_static/: CMakeLists.txt  README.md
lib_static/bench/: CMakeLists.txt
lib_static/bench/inc/static/: bench_static.hpp
lib_static/bench/src/: bench.cpp
lib_static/bench/src/static/: bench_static.cpp
lib_static/inc/jar/com/: basic_address.hpp  basic_protocol.hpp  basic_socket.hpp  basic_stream_socket.hpp  datagram_socket.hpp  shutdown_mode.hpp  socket_family.hpp  socket_protocol.hpp  socket_type.hpp  stream_server_socket.hpp  stream_socket.hpp
lib_static/inc/jar/com/ipc/: basic_ipc_address.hpp  ipc.hpp
lib_static/inc/jar/fs/: file_descriptor.hpp
lib_static/inc/jar/net/: basic_stream_socket.hpp  datagram_socket.hpp  domain_address.hpp  shutdown_mode.hpp  socket.hpp  socket_address.hpp  socket_family.hpp  socket_type.hpp  stream_server_socket.hpp  stream_socket.hpp
lib_static/inc/jar/system/posix/: ipc_address.hpp  socket.hpp
lib_static/src/jar/com/: shutdown_mode.cpp  socket_family.cpp  socket_protocol.cpp  socket_type.cpp
lib_static/src/jar/fs/: file_descriptor.cpp
lib_static/src/jar/net/: basic_stream_socket.cpp  datagram_socket.cpp  domain_address.cpp  socket.cpp  stream_server_socket.cpp  stream_socket.cpp
lib_static/src/jar/system/posix/: socket.cpp
lib_static/src/jar/util/: contract.hpp
lib_static/test/bench/: CMakeLists.txt  README.md
lib_static/test/bench/src/jar/net/: basic_socket_benchmark.hpp  datagram_socket_benchmark.cpp  datagram_socket_benchmark.hpp  stream_socket_benchmark.cpp  stream_socket_benchmark.hpp
lib_static/test/src/static/: test_static.cpp
lib_static/test/unit/: CMakeLists.txt
lib_static/test/unit/src/: test.cpp
lib_static/test/unit/src/jar/net/: basic_socket_test.hpp  datagram_socket_test.cpp  datagram_socket_test.hpp  (+2 more)
(+41 files in other folders)
